--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #f9fafb;
+    background-color: darkgray;
     line-height: 1.6;
     color: #374151;
   }
